<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobilePlans</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="VodafoneTitle">"Vodafone : "</string>
    <string name="Empty">" "</string>
    <string name="MobinilTitle">"Mobinil : "</string>
    <string name="EtisalatTitle">"Etisalat : "</string>
    <string name="othersTitle">Others : </string>

</resources>
